--- a/Создание_датасета_на_углах_mediaPipe.ipynb
+++ b/Создание_датасета_на_углах_mediaPipe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "1d239e2d-2ee1-4078-bda8-90b5618a5e46",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "abc24941-8ba4-4724-8a83-cb29e6d8ceea",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "id": "eb3ee98b-b133-4eee-9f8b-267ecc53f6cc",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "id": "66b3f6b0-b9ca-49b3-be14-5a20427b957d",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "b693ef91-de88-47c9-9ebc-aaf8043ef199",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "07fd98da-ebce-4b96-bedd-251c72feb7fb",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "4     327.018874     14.938305  downdog  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "631d5fa9-5595-4d24-92e4-e0b63b27a179",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
        "4      33.991283     56.170744  downdog  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,27 +476,11 @@
     "print(data_te_angle.info())\n",
     "data_te_angle.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97e4c298-9e5f-41e2-903d-a48b32a642a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2da1da26-e415-4049-88b9-293e47966329",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".cours_pr",
    "language": "python",
    "name": "python3"
   },
@@ -510,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
