--- a/Создание датасета на углах_yolo.ipynb
+++ b/Создание датасета на углах_yolo.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b693ef91-de88-47c9-9ebc-aaf8043ef199",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "07fd98da-ebce-4b96-bedd-251c72feb7fb",
    "metadata": {},
    "outputs": [
@@ -136,24 +136,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time:  2.906088352203369\n",
+      "time:  3.6398730278015137\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1080 entries, 0 to 1079\n",
+      "Index: 1081 entries, 0 to 1080\n",
       "Data columns (total 10 columns):\n",
       " #   Column           Non-Null Count  Dtype  \n",
       "---  ------           --------------  -----  \n",
-      " 0   FileName         1080 non-null   object \n",
-      " 1   RightElbowAngle  1080 non-null   float64\n",
-      " 2   LeftElbowAngle   1080 non-null   float64\n",
-      " 3   RightHandAngle   1080 non-null   float64\n",
-      " 4   LeftHandAngle    1080 non-null   float64\n",
-      " 5   RightKneeAngle   1080 non-null   float64\n",
-      " 6   LeftKneeAngle    1080 non-null   float64\n",
-      " 7   RightLegAngle    1080 non-null   float64\n",
-      " 8   LeftLegAngle     1080 non-null   float64\n",
-      " 9   target           1080 non-null   object \n",
+      " 0   FileName         1081 non-null   object \n",
+      " 1   RightElbowAngle  1081 non-null   float64\n",
+      " 2   LeftElbowAngle   1081 non-null   float64\n",
+      " 3   RightHandAngle   1081 non-null   float64\n",
+      " 4   LeftHandAngle    1081 non-null   float64\n",
+      " 5   RightKneeAngle   1081 non-null   float64\n",
+      " 6   LeftKneeAngle    1081 non-null   float64\n",
+      " 7   RightLegAngle    1081 non-null   float64\n",
+      " 8   LeftLegAngle     1081 non-null   float64\n",
+      " 9   target           1081 non-null   object \n",
       "dtypes: float64(8), object(2)\n",
-      "memory usage: 92.8+ KB\n",
+      "memory usage: 92.9+ KB\n",
       "None\n"
      ]
     },
@@ -193,68 +193,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DATASET/TRAIN/downdog/00000128.jpg</td>\n",
-       "      <td>342.129240</td>\n",
-       "      <td>276.810211</td>\n",
-       "      <td>228.896501</td>\n",
-       "      <td>331.665858</td>\n",
-       "      <td>190.162943</td>\n",
-       "      <td>179.789484</td>\n",
-       "      <td>187.816537</td>\n",
-       "      <td>145.514073</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TRAIN/goddess/00000112.jpg</td>\n",
+       "      <td>254.719619</td>\n",
+       "      <td>95.756570</td>\n",
+       "      <td>278.093145</td>\n",
+       "      <td>81.819444</td>\n",
+       "      <td>164.562274</td>\n",
+       "      <td>226.456000</td>\n",
+       "      <td>141.613974</td>\n",
+       "      <td>251.368236</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>DATASET/TRAIN/downdog/00000129.jpg</td>\n",
-       "      <td>314.581770</td>\n",
-       "      <td>327.037972</td>\n",
-       "      <td>94.317552</td>\n",
-       "      <td>247.365465</td>\n",
-       "      <td>165.440941</td>\n",
-       "      <td>161.875275</td>\n",
-       "      <td>66.059912</td>\n",
-       "      <td>61.513083</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TRAIN/goddess/00000190.jpg</td>\n",
+       "      <td>161.660203</td>\n",
+       "      <td>203.508757</td>\n",
+       "      <td>175.865468</td>\n",
+       "      <td>171.231871</td>\n",
+       "      <td>155.170690</td>\n",
+       "      <td>171.758132</td>\n",
+       "      <td>344.959159</td>\n",
+       "      <td>346.793106</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>DATASET/TRAIN/downdog/00000130.jpg</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>20.258953</td>\n",
-       "      <td>20.908121</td>\n",
-       "      <td>182.021294</td>\n",
-       "      <td>182.348821</td>\n",
-       "      <td>97.848886</td>\n",
-       "      <td>96.882186</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TRAIN/goddess/00000348.jpg</td>\n",
+       "      <td>164.929313</td>\n",
+       "      <td>128.045148</td>\n",
+       "      <td>343.511718</td>\n",
+       "      <td>96.995172</td>\n",
+       "      <td>306.509213</td>\n",
+       "      <td>313.679921</td>\n",
+       "      <td>29.378239</td>\n",
+       "      <td>49.184764</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>DATASET/TRAIN/downdog/00000131.jpg</td>\n",
-       "      <td>189.138947</td>\n",
-       "      <td>151.389954</td>\n",
-       "      <td>143.959020</td>\n",
-       "      <td>116.957221</td>\n",
-       "      <td>189.665032</td>\n",
-       "      <td>184.135467</td>\n",
-       "      <td>339.161963</td>\n",
-       "      <td>313.657414</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TRAIN/goddess/00000115.jpg</td>\n",
+       "      <td>184.734978</td>\n",
+       "      <td>155.849069</td>\n",
+       "      <td>268.265609</td>\n",
+       "      <td>93.856410</td>\n",
+       "      <td>133.484720</td>\n",
+       "      <td>218.593137</td>\n",
+       "      <td>103.267217</td>\n",
+       "      <td>251.093536</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>DATASET/TRAIN/downdog/00000132.png</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>33.595478</td>\n",
-       "      <td>34.364103</td>\n",
-       "      <td>200.387035</td>\n",
-       "      <td>179.748572</td>\n",
-       "      <td>161.909927</td>\n",
-       "      <td>123.446733</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TRAIN/goddess/00000358.jpg</td>\n",
+       "      <td>229.345556</td>\n",
+       "      <td>108.588067</td>\n",
+       "      <td>278.313297</td>\n",
+       "      <td>76.443765</td>\n",
+       "      <td>171.685030</td>\n",
+       "      <td>207.780170</td>\n",
+       "      <td>152.415336</td>\n",
+       "      <td>222.780967</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -262,28 +262,28 @@
       ],
       "text/plain": [
        "                             FileName  RightElbowAngle  LeftElbowAngle  \\\n",
-       "0  DATASET/TRAIN/downdog/00000128.jpg       342.129240      276.810211   \n",
-       "1  DATASET/TRAIN/downdog/00000129.jpg       314.581770      327.037972   \n",
-       "2  DATASET/TRAIN/downdog/00000130.jpg         0.000000        0.000000   \n",
-       "3  DATASET/TRAIN/downdog/00000131.jpg       189.138947      151.389954   \n",
-       "4  DATASET/TRAIN/downdog/00000132.png         0.000000        0.000000   \n",
+       "0  DATASET/TRAIN/goddess/00000112.jpg       254.719619       95.756570   \n",
+       "1  DATASET/TRAIN/goddess/00000190.jpg       161.660203      203.508757   \n",
+       "2  DATASET/TRAIN/goddess/00000348.jpg       164.929313      128.045148   \n",
+       "3  DATASET/TRAIN/goddess/00000115.jpg       184.734978      155.849069   \n",
+       "4  DATASET/TRAIN/goddess/00000358.jpg       229.345556      108.588067   \n",
        "\n",
        "   RightHandAngle  LeftHandAngle  RightKneeAngle  LeftKneeAngle  \\\n",
-       "0      228.896501     331.665858      190.162943     179.789484   \n",
-       "1       94.317552     247.365465      165.440941     161.875275   \n",
-       "2       20.258953      20.908121      182.021294     182.348821   \n",
-       "3      143.959020     116.957221      189.665032     184.135467   \n",
-       "4       33.595478      34.364103      200.387035     179.748572   \n",
+       "0      278.093145      81.819444      164.562274     226.456000   \n",
+       "1      175.865468     171.231871      155.170690     171.758132   \n",
+       "2      343.511718      96.995172      306.509213     313.679921   \n",
+       "3      268.265609      93.856410      133.484720     218.593137   \n",
+       "4      278.313297      76.443765      171.685030     207.780170   \n",
        "\n",
        "   RightLegAngle  LeftLegAngle   target  \n",
-       "0     187.816537    145.514073  downdog  \n",
-       "1      66.059912     61.513083  downdog  \n",
-       "2      97.848886     96.882186  downdog  \n",
-       "3     339.161963    313.657414  downdog  \n",
-       "4     161.909927    123.446733  downdog  "
+       "0     141.613974    251.368236  goddess  \n",
+       "1     344.959159    346.793106  goddess  \n",
+       "2      29.378239     49.184764  goddess  \n",
+       "3     103.267217    251.093536  goddess  \n",
+       "4     152.415336    222.780967  goddess  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "631d5fa9-5595-4d24-92e4-e0b63b27a179",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time:  1.5003373622894287\n",
+      "time:  1.5711002349853516\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 470 entries, 0 to 469\n",
       "Data columns (total 10 columns):\n",
@@ -365,68 +365,68 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DATASET/TEST/downdog/00000000.jpg</td>\n",
-       "      <td>338.624574</td>\n",
-       "      <td>338.189221</td>\n",
-       "      <td>253.845263</td>\n",
-       "      <td>272.272865</td>\n",
-       "      <td>232.755539</td>\n",
-       "      <td>144.003101</td>\n",
-       "      <td>249.460126</td>\n",
-       "      <td>145.496942</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TEST/goddess/00000016.jpg</td>\n",
+       "      <td>160.885343</td>\n",
+       "      <td>185.576944</td>\n",
+       "      <td>177.214806</td>\n",
+       "      <td>177.329992</td>\n",
+       "      <td>189.412789</td>\n",
+       "      <td>175.199735</td>\n",
+       "      <td>203.859499</td>\n",
+       "      <td>160.711422</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>DATASET/TEST/downdog/00000001.JPG</td>\n",
-       "      <td>197.997990</td>\n",
-       "      <td>281.168449</td>\n",
-       "      <td>184.989974</td>\n",
-       "      <td>104.459494</td>\n",
-       "      <td>156.100033</td>\n",
-       "      <td>150.131203</td>\n",
-       "      <td>287.261636</td>\n",
-       "      <td>262.485779</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TEST/goddess/00000057.jpg</td>\n",
+       "      <td>209.860142</td>\n",
+       "      <td>159.555976</td>\n",
+       "      <td>298.897340</td>\n",
+       "      <td>80.349340</td>\n",
+       "      <td>174.761894</td>\n",
+       "      <td>200.037193</td>\n",
+       "      <td>144.343021</td>\n",
+       "      <td>239.793261</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>DATASET/TEST/downdog/00000002.jpg</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>37.039138</td>\n",
-       "      <td>38.995280</td>\n",
-       "      <td>231.951914</td>\n",
-       "      <td>136.059085</td>\n",
-       "      <td>190.767107</td>\n",
-       "      <td>68.089322</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TEST/goddess/00000036.jpg</td>\n",
+       "      <td>259.127096</td>\n",
+       "      <td>88.282096</td>\n",
+       "      <td>282.023145</td>\n",
+       "      <td>75.400107</td>\n",
+       "      <td>157.921006</td>\n",
+       "      <td>230.761544</td>\n",
+       "      <td>128.540709</td>\n",
+       "      <td>252.643044</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>DATASET/TEST/downdog/00000003.jpg</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>41.467525</td>\n",
-       "      <td>241.504732</td>\n",
-       "      <td>107.585444</td>\n",
-       "      <td>311.766109</td>\n",
-       "      <td>45.267594</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TEST/goddess/00000088.jpg</td>\n",
+       "      <td>241.129174</td>\n",
+       "      <td>103.711100</td>\n",
+       "      <td>275.062032</td>\n",
+       "      <td>77.725315</td>\n",
+       "      <td>147.528463</td>\n",
+       "      <td>213.500616</td>\n",
+       "      <td>130.670094</td>\n",
+       "      <td>237.603980</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>DATASET/TEST/downdog/00000004.jpg</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>35.829724</td>\n",
-       "      <td>33.327523</td>\n",
-       "      <td>100.371229</td>\n",
-       "      <td>263.147738</td>\n",
-       "      <td>30.803267</td>\n",
-       "      <td>226.775665</td>\n",
-       "      <td>downdog</td>\n",
+       "      <td>DATASET/TEST/goddess/00000050.jpg</td>\n",
+       "      <td>245.206824</td>\n",
+       "      <td>109.379621</td>\n",
+       "      <td>270.826504</td>\n",
+       "      <td>89.862478</td>\n",
+       "      <td>166.866823</td>\n",
+       "      <td>217.437081</td>\n",
+       "      <td>141.953858</td>\n",
+       "      <td>235.008799</td>\n",
+       "      <td>goddess</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -434,28 +434,28 @@
       ],
       "text/plain": [
        "                            FileName  RightElbowAngle  LeftElbowAngle  \\\n",
-       "0  DATASET/TEST/downdog/00000000.jpg       338.624574      338.189221   \n",
-       "1  DATASET/TEST/downdog/00000001.JPG       197.997990      281.168449   \n",
-       "2  DATASET/TEST/downdog/00000002.jpg         0.000000        0.000000   \n",
-       "3  DATASET/TEST/downdog/00000003.jpg         0.000000        0.000000   \n",
-       "4  DATASET/TEST/downdog/00000004.jpg         0.000000        0.000000   \n",
+       "0  DATASET/TEST/goddess/00000016.jpg       160.885343      185.576944   \n",
+       "1  DATASET/TEST/goddess/00000057.jpg       209.860142      159.555976   \n",
+       "2  DATASET/TEST/goddess/00000036.jpg       259.127096       88.282096   \n",
+       "3  DATASET/TEST/goddess/00000088.jpg       241.129174      103.711100   \n",
+       "4  DATASET/TEST/goddess/00000050.jpg       245.206824      109.379621   \n",
        "\n",
        "   RightHandAngle  LeftHandAngle  RightKneeAngle  LeftKneeAngle  \\\n",
-       "0      253.845263     272.272865      232.755539     144.003101   \n",
-       "1      184.989974     104.459494      156.100033     150.131203   \n",
-       "2       37.039138      38.995280      231.951914     136.059085   \n",
-       "3        0.000000      41.467525      241.504732     107.585444   \n",
-       "4       35.829724      33.327523      100.371229     263.147738   \n",
+       "0      177.214806     177.329992      189.412789     175.199735   \n",
+       "1      298.897340      80.349340      174.761894     200.037193   \n",
+       "2      282.023145      75.400107      157.921006     230.761544   \n",
+       "3      275.062032      77.725315      147.528463     213.500616   \n",
+       "4      270.826504      89.862478      166.866823     217.437081   \n",
        "\n",
        "   RightLegAngle  LeftLegAngle   target  \n",
-       "0     249.460126    145.496942  downdog  \n",
-       "1     287.261636    262.485779  downdog  \n",
-       "2     190.767107     68.089322  downdog  \n",
-       "3     311.766109     45.267594  downdog  \n",
-       "4      30.803267    226.775665  downdog  "
+       "0     203.859499    160.711422  goddess  \n",
+       "1     144.343021    239.793261  goddess  \n",
+       "2     128.540709    252.643044  goddess  \n",
+       "3     130.670094    237.603980  goddess  \n",
+       "4     141.953858    235.008799  goddess  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,27 +469,11 @@
     "print(data_te_angle.info())\n",
     "data_te_angle.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97e4c298-9e5f-41e2-903d-a48b32a642a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2da1da26-e415-4049-88b9-293e47966329",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".cours_pr",
    "language": "python",
    "name": "python3"
   },
@@ -503,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
